--- a/app_widgets/pubspec.yaml
+++ b/app_widgets/pubspec.yaml
@@ -18,3 +18,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  fonts:
+    - family: comfortaa
+      fonts:
+      - asset: fonts/comfortaa/comfortaa-variableFont_wght.ttf
