--- a/app_widgets/pubspec.yaml
+++ b/app_widgets/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
+  animate_do: ^3.1.2
   flutter:
     sdk: flutter
   go_router: ^10.0.0
@@ -25,4 +26,4 @@ flutter:
   fonts:
     - family: comfortaa
       fonts:
-      - asset: fonts/comfortaa/comfortaa-variableFont_wght.ttf
+        - asset: fonts/comfortaa/comfortaa-variableFont_wght.ttf
